[project]
name = "pynle"
version = "0.1.0"
description = "Linear Embedding"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy==1.26.4",
    "scipy>=1.13.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "jupyterlab>=4.3.1",
    "mypy>=1.13.0",
    "pandas>=2.2.3",
    "pip>=24.3.1",
    "pytest>=8.3.3",
    "ruff>=0.8.0",
    "wheel>=0.45.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pynle"]
